// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBlock.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line t-size-full-width"
  >
    line
  </button>
  <button
    class="t-button t-button--primary t-size-full-width"
  >
    primary
  </button>
  <button
    class="t-button t-button--dashed t-size-full-width"
  >
    dashed
  </button>
  <button
    class="t-button t-button--warning t-size-full-width"
  >
    warning
  </button>
  <button
    class="t-button t-button--warning-line t-size-full-width"
  >
    warning-line
  </button>
  <button
    class="t-button t-button--link t-size-full-width"
  >
    link
  </button>
  <button
    class="t-button t-button--ghost t-size-full-width"
  >
    ghost
  </button>
  <button
    class="t-button t-button--ghost-line t-size-full-width"
  >
    ghost-line
  </button>
</DocumentFragment>
`;

exports[`ButtonDisabled.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line t-is-disabled"
    disabled=""
  >
    line
  </button>
  <button
    class="t-button t-button--primary t-is-disabled"
    disabled=""
  >
    primary
  </button>
  <button
    class="t-button t-button--dashed t-is-disabled"
    disabled=""
  >
    dashed
  </button>
  <button
    class="t-button t-button--warning t-is-disabled"
    disabled=""
  >
    warning
  </button>
  <button
    class="t-button t-button--warning-line t-is-disabled"
    disabled=""
  >
    warning-line
  </button>
  <button
    class="t-button t-button--link t-is-disabled"
    disabled=""
  >
    link
  </button>
  <button
    class="t-button t-button--ghost t-is-disabled"
    disabled=""
  >
    ghost
  </button>
  <button
    class="t-button t-button--ghost-line t-is-disabled"
    disabled=""
  >
    ghost-line
  </button>
</DocumentFragment>
`;

exports[`ButtonIcon.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
    <span
      class="t-button__text"
    >
      line
    </span>
  </button>
  <button
    class="t-button t-button--primary"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
    <span
      class="t-button__text"
    >
      primary
    </span>
  </button>
  <button
    class="t-button t-button--line t-button--icon"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
  </button>
  <button
    class="t-button t-button--primary t-button--icon-primary"
  >
    <svg
      class="t-icon t-icon-search"
    >
      <use
        xlink:href="#t-icon-search"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ButtonSize.jsx 1`] = `
<DocumentFragment>
  <section>
    <button
      class="t-button t-button--line t-size-s"
    >
      line
    </button>
    <button
      class="t-button t-button--primary t-size-s"
    >
      primary
    </button>
    <button
      class="t-button t-button--dashed t-size-s"
    >
      dashed
    </button>
    <button
      class="t-button t-button--link t-size-s"
    >
      link
    </button>
  </section>
  <section>
    <button
      class="t-button t-button--line"
    >
      line
    </button>
    <button
      class="t-button t-button--primary"
    >
      primary
    </button>
    <button
      class="t-button t-button--dashed"
    >
      dashed
    </button>
    <button
      class="t-button t-button--link"
    >
      link
    </button>
  </section>
  <section>
    <button
      class="t-button t-button--line t-size-l"
    >
      line
    </button>
    <button
      class="t-button t-button--primary t-size-l"
    >
      primary
    </button>
    <button
      class="t-button t-button--dashed t-size-l"
    >
      dashed
    </button>
    <button
      class="t-button t-button--link t-size-l"
    >
      link
    </button>
  </section>
</DocumentFragment>
`;

exports[`ButtonTheme.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    line
  </button>
  <button
    class="t-button t-button--primary"
  >
    primary
  </button>
  <button
    class="t-button t-button--dashed"
  >
    dashed
  </button>
  <button
    class="t-button t-button--warning"
  >
    warning
  </button>
  <button
    class="t-button t-button--warning-line"
  >
    warning-line
  </button>
  <button
    class="t-button t-button--link"
  >
    link
  </button>
  <button
    class="t-button t-button--ghost"
  >
    ghost
  </button>
  <button
    class="t-button t-button--ghost-line"
  >
    ghost-line
  </button>
</DocumentFragment>
`;
